2007-07-10 Hal Rosenstock <halr@voltaire.com>

	* 1.3.1 release of infiniband-diags

2007-06-20 Hal Rosenstock <halr@voltaire.com>

	* src/ibaddr.c, src/ibping.c, src/ibportstate.c,
	  src/ibsysstat.c, src/perfquery.c, src/sminfo.c,
	  src/smpquery.c, src/vendstat.c, Makefile.am:
	  Use diag common code ib_error routine

2007-06-18 Hal Rosenstock <halr@voltaire.com>

	* man/ibaddr.8: Improve description

2007-06-04 Hal Rosenstock <halr@voltaire.com>

	* include/ibnetdiscover.h, src/ibnetdiscover.c,
	  man/ibnetdiscover.8: Add link width and speed to topology
	  file output

2007-06-02 Hal Rosenstock <halr@voltaire.com>

	* man/ibnetdiscover.8: Add topology file format section

2007-06-01 Hal Rosenstock <halr@voltaire.com>

	* man/ibnetdiscover.8: Add grouping information

	* include/ibnetdiscover.h, src/ibnetdiscover.c: Fix
	  list by nodetype operations 

	* src/ibnetdiscover.c, man/ibnetdiscover.8: Add support
	  for -R(outer_list)

	* Makefile.am: Add ibidsverify

	* scripts/ibidsverify.pl, man/ibidsverify.8: Add script
	  and man page for ibidsverify

2007-05-31 Hal Rosenstock <halr@voltaire.com>

	* man/ibprintca.8, man/ibprintswitch.8, man/ibprintrt.8:
	  Add description of list capability

	* Makefile.am, configure.in: Add ibdatacounters

	* scripts/ibdatacounters.in, man/ibdatacounters.8: Add
	  script and man page for subnet wide data counters

	* configure.in: Change IBSCRIPTPATH from bindir to sbindir 

2007-05-30 Hal Rosenstock <halr@voltaire.com>

	* Makefile.am, configure.in: Add ibrouters and ibprintrt.pl

	* scripts/ibrouters.in, scripts/ibprintrt.pl,
	  man/ibrouters.8, man/ibprintrt.8: Add scripts and man pages
	  for display of IB routers

	* scripts/ibqueryerrors.pl: Add GUID to output line for ports 

	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
	  scripts/ibcheckportstate.in, scripts/ibcheckportwidth.in,
	  scripts/ibdatacounts.in: Add lid and port into verbose output

	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,