@@ -48,7 +48,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_sbindir}/vendstat
 %{_sbindir}/dump_mfts.sh
 %{_sbindir}/dump_lfts.sh
-%{_sbindir}/set_mthca_nodedesc.sh
+%{_sbindir}/set_nodedesc.sh
 %{_sbindir}/sm*
 %define _perldir %(perl -e 'use Config; $T=$Config{installsitearch}; $T=~/(.*)\\/site_perl.*/; print $1;')
 %{_perldir}/*
@@ -56,6 +56,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc README ChangeLog
 
 %changelog
+* Thu Aug 9 2007 Ira Weiny <weiny2@llnl.gov> - 1.3.1
+- Change set_mthca_nodedesc.sh to set_nodedesc.sh
+
 * Tue Jul 10 2007 Hal Rosenstock <halr@voltaire.com> - 1.3.1
 - Add link width and speed to topology file output in ibnetdiscover
 - Add support for -R(outer_list) in ibnetdiscover
