@@ -1,3 +1,9 @@
+2007-08-09 Ira Weiny <weiny2@llnl.gov>
+
+	* scripts/set_mthca_nodedesc.sh: change to set_nodedesc.sh
+	* scripts/set_mthca_nodedesc.sh: attempt to set nodedesc on all
+	  HCA's found in sysfs
+
 2007-07-10 Hal Rosenstock <halr@voltaire.com>
 
 	* 1.3.1 release of infiniband-diags
